--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "@nuxtjs/axios": "^5.12.5",
+    "@stomp/stompjs": "^6.1.0",
     "cookie-universal-nuxt": "^2.1.4",
     "cookieparser": "^0.1.0",
     "core-js": "^3.8.2",
     "nuxt": "^2.14.12",
     "nuxt-material-design-icons": "^1.0.4",
     "nuxt-material-design-icons-iconfont": "^1.0.2",
+    "sockjs-client": "^1.5.1",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.6"
   },
